--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"npm run start-react\" \"npm run start-api\"",
+    "build": "react-scripts build",
     "start-react": "react-scripts start",
     "start-api": "json-server --watch db.json --port 4000"
   },
